--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -18,7 +18,7 @@ html, body, h1, h2, h3, h4, h5, h6, p, ul, ol, li, img {
 
 /*- Base color -*/
 
-$main-color: #1e8bc3;
+$main-color: #2c82c9;
 $background-color: #FDFDFD;
 $text-color: #222222;
 
